# C-Course

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  distributed_systems_homework.md  instructor_solution.md  manage_access.sh  requirements.txt  threading_code_examples.cpp  threading_concepts.md  week3manim_transcript.md
Resources/: README.md
Resources/Code_Examples/: sorting_algorithm_comparison_graph.py  sorting_algorithms_manim.py
Resources/Slides/: Week1_Presentation.md  course_plan.md
Week1/: README.md  order_book_sorting_exercise.cpp  sorting_algorithms_manim.py  sorting_benchmark.cpp
Week2/: README.md
Week2/homework/: CMakeLists.txt  Makefile  README.md  homework.md
Week2/homework/benchmarks/: lock_free_components_bench.cpp  order_book_allocator_bench.cpp  time_series_pool_bench.cpp
Week2/homework/include/: lock_free_components.hpp  market_data_manager.hpp  order_book_allocator.hpp  time_series_pool.hpp
Week2/homework/src/: README.md  lock_free_components.cpp  market_data_manager.cpp  order_book_allocator.cpp  time_series_pool.cpp
Week2/homework/tests/: lock_free_components_test.cpp  market_data_manager_test.cpp  order_book_allocator_test.cpp  time_series_pool_test.cpp
Week3/: README.md  threading_visualization.py  tradengn_demo.py  tradengn_demo_transcript.md  transcript-tradengn.md  transcript.md  week3manim.py
Week3/demo_solution/: CMakeLists.txt  README.md
Week3/demo_solution/include/: lock_free_queue.hpp  market_data_handler.hpp
Week3/demo_solution/src/: integrated_system_test.cpp
Week3/homework/: CMakeLists.txt  README.md
Week3/homework/benchmarks/: market_data_handler_perf.cpp
Week3/homework/src/: thread_pool.hpp
Week3/homework/tests/: integrated_system_test.cpp  market_data_handler_test.cpp
Week4/: distributed_systems_transcript.md  distributed_systems_visualization.py  distributed_systems_visualization_transcript.md  expected_output.txt  instructor_solution_part1.md  instructor_solution_part2.md  strategy_implementation_homework.md  trade_ngin_comprehensive_homework.md  trade_ngin_visualization.py
Week4/src/: common_types.h  homework_demo.cpp  order_book_test.cpp  system_test.cpp  trading_strategy.cpp
demo_solution/include/: order_book_allocator.hpp  thread_pool.hpp
demo_solution/src/: market_data_handler.cpp  thread_pool.cpp
homework/: homework.md
homework/benchmarks/: integrated_performance_test.cpp
homework/src/: lock_free_queue.hpp  market_data_handler.hpp
homework/src/impl/: market_data_handler.cpp
src/: latency_monitor.h  message_bus.cpp  message_bus.h  order_book_processor.cpp  order_book_processor.h  risk_calculator.cpp  risk_calculator.h  trading_strategy.h
